# UniSystem

./: CMakeLists.txt  README.md  main.cpp
Models/: College.cpp  College.h  Department.cpp  Department.h  DepartmentModule.cpp  DepartmentModule.h  Module.cpp  Module.h  Student.cpp  Student.h  StudentAssessment.cpp  StudentAssessment.h
Models/Helper/: CMD.cpp  DataModel.cpp  ExcelReader.cpp
